# chamber-sentinel

./: .gitignore  Chamber Sentinel - Position Paper v2.md  Chamber Sentinel - Position Paper v3.md  Chamber Sentinel - Position Paper v4.md  Chamber Sentinel - Position Paper.md  README.md  gradlew  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/chamber/sentinel/: ChamberBridge.kt  ChamberRuntime.kt  MainActivity.kt
app/src/main/java/com/chamber/sentinel/camera/: CameraController.kt  FrameProcessor.kt
app/src/main/java/com/chamber/sentinel/detection/: ObjectDetector.kt
app/src/main/java/com/chamber/sentinel/integrity/: CameraAccessMonitor.kt  FileMonitor.kt  IntegrityMonitor.kt  NetworkMonitor.kt  ProcessMonitor.kt  ScreenCaptureMonitor.kt
app/src/main/java/com/chamber/sentinel/ui/: EventListFragment.kt  IntegrityDashboard.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: ISSUES.md  PRD.md
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/chamber-audit/: Cargo.toml
rust/chamber-audit/src/: lib.rs
rust/chamber-burn/: Cargo.toml
rust/chamber-burn/src/: lib.rs
rust/chamber-core/: Cargo.toml
rust/chamber-core/src/: lib.rs
rust/chamber-core/tests/: substrate_tests.rs
rust/chamber-crypto/: Cargo.toml
rust/chamber-crypto/src/: encrypted_store.rs  lib.rs  mem_protect.rs
rust/chamber-policy/: Cargo.toml
rust/chamber-policy/src/: lib.rs
rust/chamber-state/: Cargo.toml
rust/chamber-state/src/: lib.rs
rust/chamber-types/: Cargo.toml
rust/chamber-types/src/: lib.rs
