[package]
name = "chamber-burn"
version.workspace = true
edition.workspace = true

[dependencies]
chamber-types = { workspace = true }
chamber-crypto = { workspace = true }
chamber-state = { workspace = true }
chamber-audit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
