[package]
name = "chamber-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
chamber-types = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
